--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "thomas-bredillet/sf_louvre",
+    "description": "Réservation du musée du Louvre - Projet OC",
     "license": "proprietary",
     "type": "project",
     "autoload": {
@@ -13,7 +14,7 @@
     },
     "require": {
         "php": ">=5.3.9",
-        "symfony/symfony": "2.8.*",
+        "symfony/symfony": "2.8.3",
         "doctrine/orm": "^2.4.8",
         "doctrine/doctrine-bundle": "~1.4",
         "symfony/swiftmailer-bundle": "~2.3",
