--- a/src/AccueilBundle/Resources/config/services.yml
+++ b/src/AccueilBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    accueil.example:
-#        class: AccueilBundle\Example
-#        arguments: ["@service_id", "plain_value", %parameter%]
+    accueil.attribution:
+        class:    AccueilBundle\AttributionTarifs\AccueilAttributionTarifs
+        arguments: [ @doctrine.orm.entity_manager ]
