Ajout paiement validé, mail, pdf et bundle QRCode

--- a/src/AccueilBundle/Resources/config/routing.yml
+++ b/src/AccueilBundle/Resources/config/routing.yml
@@ -13,3 +13,7 @@ reservation_billet:
 recapitulatif:
     path:     /recap/{id}
     defaults: { _controller: AccueilBundle:Reservation:recap }
+
+paiement:
+    path:    /paiement/{id}
+    defaults: { _controller: AccueilBundle:Reservation:paiement }
