--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -9,7 +9,7 @@ framework:
 
 web_profiler:
     toolbar: true
-    intercept_redirects: false
+    intercept_redirects: true
 
 monolog:
     handlers:
@@ -30,5 +30,11 @@ monolog:
         #    type:   chromephp
         #    level:  info
 
-#swiftmailer:
-#    delivery_address: me@example.com
+swiftmailer:
+    disable_delivery: false
+    delivery_address: virtual.triathlon.manager@gmail.com
+    transport:  gmail
+    username:   virtual.triathlon.manager@gmail.com
+    password:   m3bs45cc
+    encryption: ssl
+    auth_mode:  login
