--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/doctrine-fixtures-bundle": "~2.2",
-        "webonaute/doctrine-fixtures-generator-bundle": "^1.2"
+        "webonaute/doctrine-fixtures-generator-bundle": "^1.2",
+        "ensepar/html2pdf-bundle" : "dev-master",
+        "endroid/qrcode-bundle": "^1.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
