--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/doctrine-fixtures-bundle": "~2.2",
         "webonaute/doctrine-fixtures-generator-bundle": "^1.2",
-        "ensepar/html2pdf-bundle" : "dev-master"
+        "ensepar/html2pdf-bundle" : "~2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
